--- a/Application Source/Strive/Common/Strive.Common.csproj
+++ b/Application Source/Strive/Common/Strive.Common.csproj
@@ -96,6 +96,11 @@
                     SubType = "Code"
                     BuildAction = "Compile"
                 />
+                <File
+                    RelPath = "TracedException.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
             </Include>
         </Files>
     </CSHARP>
