*** empty log message ***

--- a/Application Source/Strive/Network/Server/Strive.Network.Server.csproj
+++ b/Application Source/Strive/Network/Server/Strive.Network.Server.csproj
@@ -107,7 +107,12 @@
                     BuildAction = "Compile"
                 />
                 <File
-                    RelPath = "Listener.cs"
+                    RelPath = "TcpHandler.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "UdpHandler.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
                 />
