bug fixes to collision detection

--- a/Source/Strive/UI/Strive.UI.csproj
+++ b/Source/Strive/UI/Strive.UI.csproj
@@ -170,6 +170,10 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "Icons\Player.bmp"
+                    BuildAction = "Content"
+                />
+                <File
                     RelPath = "Icons\StartedServer.bmp"
                     BuildAction = "EmbeddedResource"
                 />
