--- a/Source/Strive/Rendering/Strive.Rendering.csproj
+++ b/Source/Strive/Rendering/Strive.Rendering.csproj
@@ -222,6 +222,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "Terrain\Landscape.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "Textures\Texture.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
