1.  The UI Fairy visited WhoList 2.  We have a command window 3.  Some bugs fixed in the damn remember your settings (still some there)

--- a/Source/Strive/UI/Strive.UI.csproj
+++ b/Source/Strive/UI/Strive.UI.csproj
@@ -182,6 +182,10 @@
                     BuildAction = "EmbeddedResource"
                 />
                 <File
+                    RelPath = "Icons\Refresh.bmp"
+                    BuildAction = "EmbeddedResource"
+                />
+                <File
                     RelPath = "Icons\StartedServer.bmp"
                     BuildAction = "EmbeddedResource"
                 />
@@ -193,6 +197,16 @@
                     RelPath = "Settings\SettingsManager.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "Windows\CommandInput.cs"
+                    SubType = "UserControl"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "Windows\CommandInput.resx"
+                    DependentUpon = "CommandInput.cs"
+                    BuildAction = "EmbeddedResource"
                 />
                 <File
                     RelPath = "Windows\Icon1.ico"
