Improved Icons.IconManager Added a Log icon

--- a/Source/Strive/UI/Strive.UI.csproj
+++ b/Source/Strive/UI/Strive.UI.csproj
@@ -186,6 +186,10 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "Icons\Log.bmp"
+                    BuildAction = "EmbeddedResource"
+                />
+                <File
                     RelPath = "Icons\Mobile.bmp"
                     BuildAction = "EmbeddedResource"
                 />
