More icon stuffs

--- a/Source/Strive/UI/Strive.UI.csproj
+++ b/Source/Strive/UI/Strive.UI.csproj
@@ -177,6 +177,14 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "Icons\Chat.bmp"
+                    BuildAction = "EmbeddedResource"
+                />
+                <File
+                    RelPath = "Icons\Command.bmp"
+                    BuildAction = "EmbeddedResource"
+                />
+                <File
                     RelPath = "Icons\Connection.bmp"
                     BuildAction = "EmbeddedResource"
                 />
