Refactored Strive.Logging to be a static class. Now its basically a wrapper for Diagnostics.Trace but timestamps and prefaces with ERROR, WARNING etc, and optionally consumes messages straight to a file or textbox.

--- a/Source/Strive/Network/Client/Strive.Network.Client.csproj
+++ b/Source/Strive/Network/Client/Strive.Network.Client.csproj
@@ -126,6 +126,11 @@
                     Project = "{9FD77152-07A8-42C8-A6B3-15C9E5B442FC}"
                     Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
                 />
+                <Reference
+                    Name = "Strive.Logging"
+                    Project = "{3781C605-0BA3-4DD2-91BB-F01368CD060F}"
+                    Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
+                />
             </References>
         </Build>
         <Files>
