--- a/Source/Strive/Network/Messages/Strive.Network.Messages.csproj
+++ b/Source/Strive/Network/Messages/Strive.Network.Messages.csproj
@@ -127,6 +127,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "ToClient\AddMobile.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "ToClient\AddPhysicalObject.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
