--- a/Source/Strive/Common/Strive.Common.csproj
+++ b/Source/Strive/Common/Strive.Common.csproj
@@ -77,6 +77,11 @@
                     AssemblyName = "System.Web"
                     HintPath = "..\..\..\..\..\..\WINDOWS\Microsoft.NET\Framework\v1.0.3705\System.Web.dll"
                 />
+                <Reference
+                    Name = "Strive.Logging"
+                    Project = "{3781C605-0BA3-4DD2-91BB-F01368CD060F}"
+                    Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
+                />
             </References>
         </Build>
         <Files>
