--- a/Source/Strive/Math3D/Strive.Math3D.csproj
+++ b/Source/Strive/Math3D/Strive.Math3D.csproj
@@ -127,6 +127,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "Vector2D.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "Vector3D.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
