Some refactoring... can now use local file instead of db connection, terrain works (kinda), heading abolished in favour of rotation.

--- a/Source/Strive/Network/Client/Strive.Network.Client.csproj
+++ b/Source/Strive/Network/Client/Strive.Network.Client.csproj
@@ -131,6 +131,11 @@
                     Project = "{3781C605-0BA3-4DD2-91BB-F01368CD060F}"
                     Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
                 />
+                <Reference
+                    Name = "Strive.Math3D"
+                    Project = "{14818E27-DABB-4332-B572-21BA9983D886}"
+                    Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
+                />
             </References>
         </Build>
         <Files>
