1337 termination interception for console app server

--- a/Source/Strive/Server/Console/Strive.Server.Console.csproj
+++ b/Source/Strive/Server/Console/Strive.Server.Console.csproj
@@ -77,6 +77,11 @@
                     Project = "{4895086D-8485-46EF-8DED-9E4C16227D64}"
                     Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
                 />
+                <Reference
+                    Name = "Strive.Common"
+                    Project = "{FCB073C1-253E-46D8-BCE4-79B1C1616058}"
+                    Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
+                />
             </References>
         </Build>
         <Files>
