--- a/Source/Strive/Common/Strive.Common.csproj
+++ b/Source/Strive/Common/Strive.Common.csproj
@@ -106,6 +106,11 @@
                     SubType = "Code"
                     BuildAction = "Compile"
                 />
+                <File
+                    RelPath = "Win32.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
             </Include>
         </Files>
     </CSHARP>
