--- a/Source/Strive/Resources/Strive.Resources.csproj
+++ b/Source/Strive/Resources/Strive.Resources.csproj
@@ -112,6 +112,16 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "TerrainCollection.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "TerrainPiece.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "System.Drawing.Bitmap\mango.jpg"
                     BuildAction = "Content"
                 />
