--- a/Source/Strive/UI/Strive.UI.csproj
+++ b/Source/Strive/UI/Strive.UI.csproj
@@ -187,6 +187,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "Engine\TerrainPieceModel.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "Engine\World.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
